generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-07/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::famHasCountedBy(const clang::FieldDecl*, const clang::FieldDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:135:28: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
  135 |     if (const Expr *E = A->getCountedBy()) {
      |                            ^~~~~~~~~~~~
      |                            AT_CountedBy
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h: In instantiation of ‘struct clang::ento::ProgramStateTrait<llvm::ImmutableSet<const clang::FieldDecl*> >’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:848:45:   required by substitution of ‘template<class T> typename clang::ento::ProgramStateTrait<T>::context_type clang::ento::ProgramState::get_context() const [with T = llvm::ImmutableSet<const clang::FieldDecl*>]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:158:42:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:52:33: error: no type named ‘data_type’ in ‘class llvm::ImmutableSet<const clang::FieldDecl*>’
   52 |   typedef typename T::data_type data_type;
      |                                 ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::addFieldWritten(const clang::ento::MemRegion*, const clang::FieldDecl*, clang::ento::ProgramStateRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:158:42: error: no matching function for call to ‘clang::ento::ProgramState::get_context<FieldSetTy>() const’
  158 |   auto F = State->get_context<FieldSetTy>();
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:439:47: note: candidate: ‘template<class T> typename clang::ento::ProgramStateTrait<T>::context_type clang::ento::ProgramState::get_context() const’
  439 |   typename ProgramStateTrait<T>::context_type get_context() const;
      |                                               ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:439:47: note:   substitution of deduced template arguments resulted in errors seen above
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
